# -*- python -*-

package(default_visibility = ["//visibility:public"])

load("//tools/lint:lint.bzl", "add_lint_tests")

cc_binary(
    name = "jaco_ball",
    srcs = ["jaco_ball.cc"],
    data = [
        ":jaco_ball.yaml",
        "//examples:models",
        "@drake//manipulation/models/jaco_description:models",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags"
    ],
)

cc_test(
    name = "jaco_ball_test",
    srcs = ["jaco_ball.cc"],
    args = ["--test"],
    data = [
        ":jaco_ball.yaml",
        "//examples:models",
        "@drake//manipulation/models/jaco_description:models",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags"
    ],
)

add_lint_tests()
