# -*- python -*-

package(default_visibility = ["//visibility:public"])

load("//tools/lint:lint.bzl", "add_lint_tests")

cc_binary(
    name = "kuka",
    srcs = ["kuka.cc"],
    data = [
        ":kuka.yaml",
        "//examples:models",
        "@drake//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags"
    ],
)

cc_test(
    name = "kuka_test",
    srcs = ["kuka.cc"],
    args = ["--test"],
    data = [
        ":kuka.yaml",
        "//examples:models",
        "@drake//manipulation/models/iiwa_description:models",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags"
    ],
)

add_lint_tests()
