# -*- python -*-

package(default_visibility = ["//visibility:public"])

load("//tools/lint:lint.bzl", "add_lint_tests")

cc_binary(
    name = "mini_cheetah",
    srcs = ["mini_cheetah.cc"],
    data = [
        ":mini_cheetah.yaml",
        "//examples:models",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags",
    ],
)

cc_test(
    name = "mini_cheetah_test",
    srcs = ["mini_cheetah.cc"],
    args = ["--test"],
    data = [
        ":mini_cheetah.yaml",
        "//examples:models",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags",
    ],
)

add_lint_tests()
