# -*- python -*-

package(default_visibility = ["//visibility:public"])

load("//tools/lint:lint.bzl", "add_lint_tests")

cc_binary(
    name = "punyo",
    srcs = ["punyo.cc"],
    data = [
        "//examples:models",
        ":punyo.yaml",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
    ],
)

cc_test(
    name = "punyo_test",
    srcs = ["punyo.cc"],
    data = [
        "//examples:models",
        ":punyo.yaml",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
    ],
)

add_lint_tests()
