# -*- python -*-

package(default_visibility = ["//visibility:public"])

load("//tools/lint:lint.bzl", "add_lint_tests")

cc_binary(
    name = "punyo",
    srcs = ["punyo.cc"],
    data = [
        "//examples:models",
        ":punyo.yaml",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags",
    ],
)

cc_test(
    name = "punyo_test",
    srcs = ["punyo.cc"],
    args = ["--test"],
    data = [
        "//examples:models",
        ":punyo.yaml",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags",
    ],
)

add_lint_tests()
