# -*- python -*-

package(default_visibility = ["//visibility:public"])

load("//tools/lint:lint.bzl", "add_lint_tests")

cc_binary(
    name = "spinner",
    srcs = ["spinner.cc"],
    data = [
        "//examples:models",
        ":spinner.yaml",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
    ],
)

cc_test(
    name = "spinner_test",
    srcs = ["spinner.cc"],
    data = [
        "//examples:models",
        ":spinner.yaml",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
    ],
)

add_lint_tests()
