# -*- python -*-

package(default_visibility = ["//visibility:public"])

load("//tools:test.bzl", "cc_googletest")

exports_files(["cc_py.py", "__init__.py", "test/cc_py_test.py"])

cc_library(
    name = "traj_opt",
    deps = [
        ":convergence_criteria_tolerances",
        ":inverse_dynamics_partials",
        ":penta_diagonal_matrix",
        ":penta_diagonal_solver",
        ":penta_diagonal_to_petsc_matrix",
        ":problem_definition",
        ":solver_parameters",
        ":trajectory_optimizer",
        ":trajectory_optimizer_solution",
        ":trajectory_optimizer_state",
        ":trajectory_optimizer_workspace",
        ":velocity_partials",
        ":warm_start",
    ],
)

cc_library(
    name = "penta_diagonal_matrix",
    srcs = ["penta_diagonal_matrix.cc"],
    hdrs = ["penta_diagonal_matrix.h"],
    deps = [
        "@drake//common:default_scalars",
        "@drake//common:essential",
    ],
)

cc_library(
    name = "penta_diagonal_solver",
    srcs = [],
    hdrs = ["penta_diagonal_solver.h"],
    deps = [
        ":penta_diagonal_matrix",
        "//idto/common:profiler",
        "@drake//common:essential",
    ],
)

cc_library(
    name = "penta_diagonal_to_petsc_matrix",
    srcs = ["penta_diagonal_to_petsc_matrix.cc"],
    hdrs = ["penta_diagonal_to_petsc_matrix.h"],
    deps = [
        ":penta_diagonal_matrix",
        "@drake//common:essential",
        "@drake//multibody/fem:petsc_symmetric_block_sparse_matrix",
    ],
)

cc_library(
    name = "trajectory_optimizer",
    srcs = ["trajectory_optimizer.cc"],
    hdrs = [
        "trajectory_optimizer.h",
    ],
    deps = [
        ":inverse_dynamics_partials",
        ":penta_diagonal_matrix",
        ":penta_diagonal_solver",
        ":penta_diagonal_to_petsc_matrix",
        ":problem_definition",
        ":solver_parameters",
        ":trajectory_optimizer_solution",
        ":trajectory_optimizer_state",
        ":trajectory_optimizer_workspace",
        ":velocity_partials",
        ":warm_start",
        "//idto/common:profiler",
        "@drake//common:essential",
        "@drake//geometry:scene_graph_inspector",
        "@drake//multibody/fem:petsc_symmetric_block_sparse_matrix",
        "@drake//multibody/plant",
    ],
)

cc_library(
    name = "problem_definition",
    hdrs = [
        "problem_definition.h",
    ],
    deps = [
        "@drake//common:essential",
    ],
)

cc_library(
    name = "convergence_criteria_tolerances",
    hdrs = [
        "convergence_criteria_tolerances.h",
    ],
    deps = [
        "@drake//common/yaml",
    ],
)

cc_library(
    name = "solver_parameters",
    hdrs = [
        "solver_parameters.h",
    ],
    deps = [":convergence_criteria_tolerances"],
)

cc_library(
    name = "warm_start",
    hdrs = [
        "warm_start.h",
    ],
    deps = [
        ":trajectory_optimizer_state",
        "@drake//common:essential",
        "@drake//multibody/plant",
    ],
)

cc_library(
    name = "velocity_partials",
    srcs = ["velocity_partials.cc"],
    hdrs = [
        "velocity_partials.h",
    ],
    deps = [
        "@drake//common:default_scalars",
        "@drake//common:essential",
    ],
)

cc_library(
    name = "inverse_dynamics_partials",
    srcs = ["inverse_dynamics_partials.cc"],
    hdrs = [
        "inverse_dynamics_partials.h",
    ],
    deps = [
        "@drake//common:default_scalars",
        "@drake//common:essential",
    ],
)

cc_googletest(
    name = "penta_diagonal_solver_test",
    srcs = ["test/penta_diagonal_solver_test.cc"],
    deps = [
        ":penta_diagonal_matrix",
        ":penta_diagonal_solver",
        ":penta_diagonal_to_petsc_matrix",
        "@drake//common/test_utilities:eigen_matrix_compare",
        "@drake//multibody/fem:petsc_symmetric_block_sparse_matrix",
    ],
)

cc_googletest(
    name = "penta_diagonal_to_petsc_matrix_test",
    srcs = ["test/penta_diagonal_to_petsc_matrix_test.cc"],
    deps = [
        ":penta_diagonal_matrix",
        ":penta_diagonal_to_petsc_matrix",
        "@drake//common/test_utilities:eigen_matrix_compare",
        "@drake//multibody/fem:petsc_symmetric_block_sparse_matrix",
    ],
)

cc_library(
    name = "trajectory_optimizer_state",
    srcs = ["trajectory_optimizer_state.cc"],
    hdrs = [
        "trajectory_optimizer_state.h",
    ],
    deps = [
        ":inverse_dynamics_partials",
        ":penta_diagonal_matrix",
        ":trajectory_optimizer_workspace",
        ":velocity_partials",
        "@drake//common:default_scalars",
        "@drake//common:essential",
        "@drake//multibody/plant",
    ],
)

cc_library(
    name = "trajectory_optimizer_solution",
    srcs = ["trajectory_optimizer_solution.cc"],
    hdrs = [
        "trajectory_optimizer_solution.h",
    ],
    deps = [
        "@drake//common:default_scalars",
        "@drake//common:essential",
    ],
)

cc_library(
    name = "trajectory_optimizer_workspace",
    srcs = ["trajectory_optimizer_workspace.cc"],
    hdrs = [
        "trajectory_optimizer_workspace.h",
    ],
    deps = [
        "@drake//common:default_scalars",
        "@drake//common:essential",
        "@drake//multibody/plant",
    ],
)

cc_googletest(
    name = "trajectory_optimizer_test",
    srcs = ["test/trajectory_optimizer_test.cc"],
    data = [
        "//idto/traj_opt/examples:models",
        "@drake//examples/pendulum:models",
        "@drake//manipulation/models/iiwa_description:models",
        "@drake//multibody/benchmarks/acrobot:models",
    ],
    deps = [
        ":inverse_dynamics_partials",
        ":penta_diagonal_matrix",
        ":trajectory_optimizer",
        ":trajectory_optimizer_workspace",
        ":velocity_partials",
        "//idto/common:find_resource",
        "@drake//common:find_resource",
        "@drake//common/test_utilities:eigen_matrix_compare",
        "@drake//common/test_utilities:limit_malloc",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
    ],
)

